--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 		</div>
 	</div>
 
-	<a href="https://github.com/cristurm/nyan-cat" title="Nyan Cat's home at GitHub" class="repo">
-		<i class="octicon octicon-mark-github"></i>
-		<span>My Github Repo</span>
-	</a>
+	<!--<a href="https://github.com/cristurm/nyan-cat" title="Nyan Cat's home at GitHub" class="repo">-->
+		<!--<i class="octicon octicon-mark-github"></i>-->
+		<!--<span>My Github Repo</span>-->
+	<!--</a>-->
 
 	<audio autoplay="true" loop="true">
 		<source src="audio/nyan-cat.ogg" type="audio/ogg" />
