prevent site from being scrawled by Google Search Engine

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Nyan Cat - HTML5+CSS3+JS</title>
 
+        <meta name="robots" content="noindex,nofollow">
+
 	<link rel="icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/nyan.css"/>
+
 </head>
 <body>
 	<div class="sparks-combo">
