--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Nyan Cat - HTML5+CSS3+JS</title>
+	<title>Nyan Cat</title>
 
         <meta name="robots" content="noindex,nofollow">
 
